--- a/lab04/pop_density.html
+++ b/lab04/pop_density.html
@@ -1,210 +1,143 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
-    <meta charset="utf-8">
-    <title>Interactive Web Mapping</title>
-    <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no">
+  <meta charset="utf-8" />
+  <title>US population density</title>
+  <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no" />
 
-    <!-- Including the Mapbox GL CSS file -->
-    <link href="https://api.mapbox.com/mapbox-gl-js/v2.5.0/mapbox-gl.css" rel="stylesheet">
+  <!-- Mapbox GL CSS -->
+  <link
+    href="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.css"
+    rel="stylesheet"
+  />
 
-    <!-- Including the Mapbox GL JS file -->
-    <script src="https://api.mapbox.com/mapbox-gl-js/v2.5.0/mapbox-gl.js"></script>
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+        sans-serif;
+    }
 
-    <style>
-        /* CSS styles for heading and paragraphs */
-        h2,
-        h3 {
-            margin: 10px;
-            font-size: 18px;
-        }
+    #map {
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      width: 100%;
+    }
 
-        h3 {
-            font-size: 16px;
-        }
+    .info-card {
+      position: absolute;
+      top: 16px;
+      left: 16px;
+      background: white;
+      padding: 12px 16px;
+      border-radius: 4px;
+      box-shadow: 0 0 6px rgba(0, 0, 0, 0.15);
+      max-width: 260px;
+      z-index: 1;
+    }
 
-        p {
-            margin: 10px;
-        }
+    .info-card h2 {
+      margin: 0 0 4px 0;
+      font-size: 16px;
+    }
 
-        /**
-        * Create a position for the map
-        * on the page */
-        #map {
-            position: absolute;
-            top: 0;
-            bottom: 0;
-            left: 0;
-            right: 0;
-            width: 100%;
-            height: 100%;
-        }
-
-        /**
-        * Set rules for how the map overlays
-        * (information box and legend) will be displayed
-         on the page. */
-        .map-overlay {
-            position: absolute;
-            bottom: 0;
-            left: 0;
-            background: rgba(255, 255, 255, 0.8);
-            border-style: solid;
-            border-width: 1px;
-            border-color: rgba(0, 0, 0, 0.2);
-            margin-left: 20px;
-            font-family: Arial, sans-serif;
-            overflow: auto;
-            border-radius: 3px;
-        }
-
-        #features {
-            top: 0;
-            height: 100px;
-            margin-top: 20px;
-            width: 250px;
-        }
-
-        #legend {
-            padding: 10px;
-            box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
-            line-height: 18px;
-            height: 210px;
-            margin-bottom: 40px;
-            width: 150px;
-        }
-
-        .legend-key {
-            display: inline-block;
-            border-radius: 20%;
-            width: 10px;
-            height: 10px;
-            margin-right: 5px;
-        }
-
-        .mapboxgl-canvas-container.mapboxgl-interactive,
-        .mapboxgl-ctrl-group button.mapboxgl-ctrl-compass {
-            cursor: unset;
-        }
-    </style>
+    .info-card p {
+      margin: 0;
+      font-size: 13px;
+    }
+  </style>
 </head>
-
 <body>
-    <div id="map"></div>
-    <div class='map-overlay' id='features'>
-        <h2>US population density</h2>
-        <div id='text-description'>
-            <p>Hover over a state!</p>
-        </div>
-    </div>
-    <div class='map-overlay' id='legend'></div>
-    <script>
-        // initialize basemmap
-        mapboxgl.accessToken =
-            'pk.eyJ1Ijoibm9sYXdpMjQiLCJhIjoiY21obW8yZWE5MmN2cjJscTE1am1sZnVmMiJ9.zLy0Qd4BNKLtusNXQYxWjw';
-        const map = new mapboxgl.Map({
-            container: 'map', // container ID
-            style: 'mapbox://styles/mapbox/light-v10', // style URL
-            zoom: 3, // starting zoom
-            center: [-100, 40] // starting center
-        });
+  <div id="map"></div>
 
-        // load data and add as layer
-        async function geojsonFetch() {
-            let response = await fetch('assets/state_data.geojson');
-            let state_data = await response.json();
+  <div class="info-card" id="info">
+    <h2>US population density</h2>
+    <p>Hover over a state!</p>
+  </div>
 
-            map.on('load', function loadingData() {
-                map.addSource('state_data', {
-                    type: 'geojson',
-                    data: state_data
-                });
+  <!-- Mapbox GL JS -->
+  <script src="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.js"></script>
+  <script>
+    // 🔑 PUT YOUR OWN MAPBOX TOKEN HERE
+    mapboxgl.accessToken = "pk.eyJ1Ijoibm9sYXdpMjQiLCJhIjoiY21obW8yZWE5MmN2cjJscTE1am1sZnVmMiJ9.zLy0Qd4BNKLtusNXQYxWjw";
 
-                map.addLayer({
-                    'id': 'state_data_layer',
-                    'type': 'fill',
-                    'source': 'state_data',
-                    'paint': {
-                        'fill-color': [
-                            'step',
-                            ['get', 'density'],
-                            '#FFEDA0',   // stop_output_0
-                            10,          // stop_input_0
-                            '#FED976',   // stop_output_1
-                            20,          // stop_input_1
-                            '#FEB24C',   // stop_output_2
-                            50,          // stop_input_2
-                            '#FD8D3C',   // stop_output_3
-                            100,         // stop_input_3
-                            '#FC4E2A',   // stop_output_4
-                            200,         // stop_input_4
-                            '#E31A1C',   // stop_output_5
-                            500,         // stop_input_5
-                            '#BD0026',   // stop_output_6
-                            1000,        // stop_input_6
-                            "#800026"    // stop_output_7
-                        ],
-                        'fill-outline-color': '#BBBBBB',
-                        'fill-opacity': 0.7,
-                    }
-                });
+    const map = new mapboxgl.Map({
+      container: "map",
+      style: "mapbox://styles/mapbox/light-v11",
+      center: [-98, 38.5], // center of US
+      zoom: 3.2,
+    });
 
-                const layers = [
-                    '0-9',
-                    '10-19',
-                    '20-49',
-                    '50-99',
-                    '100-199',
-                    '200-499',
-                    '500-999',
-                    '1000 and more'
-                ];
-                const colors = [
-                    '#FFEDA070',
-                    '#FED97670',
-                    '#FEB24C70',
-                    '#FD8D3C70',
-                    '#FC4E2A70',
-                    '#E31A1C70',
-                    '#BD002670',
-                    '#80002670'
-                ];
+    map.on("load", () => {
+      // Load state polygons from the assets folder
+      map.addSource("states", {
+        type: "geojson",
+        data: "assets/state_data.geojson",
+      });
 
-                // create legend
-                const legend = document.getElementById('legend');
-                legend.innerHTML = "<b>Population Density<br>(people/sq.mi.)</b><br><br>";
+      // Choropleth fill layer based on population density
+      map.addLayer({
+        id: "state-fills",
+        type: "fill",
+        source: "states",
+        paint: {
+          "fill-color": [
+            "interpolate",
+            ["linear"],
+            ["get", "density"], // assumes property is called "density"
+            0,
+            "#f2f0f7",
+            10,
+            "#cbc9e2",
+            50,
+            "#9e9ac8",
+            100,
+            "#756bb1",
+            200,
+            "#54278f",
+          ],
+          "fill-opacity": 0.75,
+        },
+      });
 
+      // State borders
+      map.addLayer({
+        id: "state-borders",
+        type: "line",
+        source: "states",
+        paint: {
+          "line-color": "#ffffff",
+          "line-width": 0.5,
+        },
+      });
 
-                layers.forEach((layer, i) => {
-                    const color = colors[i];
-                    const item = document.createElement('div');
-                    const key = document.createElement('span');
-                    key.className = 'legend-key';
-                    key.style.backgroundColor = color;
+      const info = document.getElementById("info");
 
-                    const value = document.createElement('span');
-                    value.innerHTML = `${layer}`;
-                    item.appendChild(key);
-                    item.appendChild(value);
-                    legend.appendChild(item);
-                });
-            });
+      // Hover interaction
+      map.on("mousemove", "state-fills", (e) => {
+        const feature = e.features[0];
+        const name = feature.properties.name || feature.properties.STATE_NAME;
+        const density =
+          feature.properties.density ||
+          feature.properties.DENSITY ||
+          feature.properties.pop_density;
 
-            map.on('mousemove', ({point}) => {
-                const state = map.queryRenderedFeatures(point, {
-                    layers: ['state_data_layer']
-                });
-                document.getElementById('text-description').innerHTML = state.length ?
-                    `<h3>${state[0].properties.name}</h3><p><strong><em>${state[0].properties.density}</strong> people per square mile</em></p>` :
-                    `<p>Hover over a state!</p>`;
-            });
-        }
+        info.innerHTML = `
+          <h2>US population density</h2>
+          <p><strong>${name || "Unknown state"}</strong><br>
+          Density: ${density !== undefined ? density : "N/A"}</p>
+        `;
+      });
 
-        // Call the function to fetch GeoJSON data and load the map
-        geojsonFetch();
-    </script>
-
+      map.on("mouseleave", "state-fills", () => {
+        info.innerHTML = `
+          <h2>US population density</h2>
+          <p>Hover over a state!</p>
+        `;
+      });
+    });
+  </script>
 </body>
-
 </html>
