--- a/lab04/pop_density.html
+++ b/lab04/pop_density.html
@@ -59,6 +59,7 @@
       box-shadow: 0 0 6px rgba(0, 0, 0, 0.15);
       font-size: 11px;
       line-height: 1.4;
+      z-index: 1;
     }
 
     .legend-title {
