--- a/index.html
+++ b/index.html
@@ -2,13 +2,218 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title>GEOG 328 Lab 4</title>
-  <meta http-equiv="refresh" content="0; url=lab04/pop_density.html" />
+  <title>WA COVID-19 cases per 10k by county</title>
+  <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no" />
+
+  <!-- Mapbox GL CSS -->
+  <link
+    href="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.css"
+    rel="stylesheet"
+  />
+
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+        sans-serif;
+    }
+
+    #map {
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      width: 100%;
+    }
+
+    .info-card {
+      position: absolute;
+      top: 16px;
+      left: 16px;
+      background: white;
+      padding: 12px 16px;
+      border-radius: 4px;
+      box-shadow: 0 0 6px rgba(0, 0, 0, 0.15);
+      max-width: 280px;
+      z-index: 1;
+    }
+
+    .info-card h2 {
+      margin: 0 0 4px 0;
+      font-size: 16px;
+    }
+
+    .info-card p {
+      margin: 0;
+      font-size: 13px;
+    }
+
+    /* Legend styles */
+    .legend {
+      position: absolute;
+      bottom: 16px;
+      left: 16px;
+      background: white;
+      padding: 8px 10px;
+      border-radius: 4px;
+      box-shadow: 0 0 6px rgba(0, 0, 0, 0.15);
+      font-size: 11px;
+      line-height: 1.4;
+      z-index: 1;
+    }
+
+    .legend-title {
+      font-weight: 600;
+      margin-bottom: 4px;
+    }
+
+    .legend-item {
+      display: flex;
+      align-items: center;
+      margin-top: 2px;
+    }
+
+    .legend-color {
+      width: 14px;
+      height: 14px;
+      margin-right: 6px;
+      border-radius: 2px;
+      border: 1px solid #ccc;
+    }
+  </style>
 </head>
 <body>
-  <p>
-    Redirecting to
-    <a href="lab04/pop_density.html">Lab 4: US population density</a>...
-  </p>
+  <div id="map"></div>
+
+  <div class="info-card" id="info">
+    <h2>WA COVID-19 cases per 10k</h2>
+    <p>Hover over a county to see cases per 10,000 residents.</p>
+  </div>
+
+  <!-- Legend box -->
+  <div id="legend" class="legend"></div>
+
+  <!-- Mapbox GL JS -->
+  <script src="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.js"></script>
+  <script>
+    // 🔑 YOUR MAPBOX TOKEN (same one you used in pop_density.html)
+    mapboxgl.accessToken = "pk.eyJ1Ijoibm9sYXdpMjQiLCJhIjoiY21obW8yZWE5MmN2cjJscTE1am1sZnVmMiJ9.zLy0Qd4BNKLtusNXQYxWjw";
+
+    const map = new mapboxgl.Map({
+      container: "map",
+      style: "mapbox://styles/mapbox/light-v11",
+      center: [-120.5, 47.4], // Washington State
+      zoom: 5.8,
+    });
+
+    map.on("load", () => {
+      // Load WA county COVID data from the lab04/assets folder
+      map.addSource("wa-covid", {
+        type: "geojson",
+        data: "lab04/assets/wa-covid-data-102521.geojson",
+      });
+
+      // Choropleth fill layer based on cases per 10k
+      map.addLayer({
+        id: "wa-counties-fill",
+        type: "fill",
+        source: "wa-covid",
+        paint: {
+          "fill-color": [
+            "interpolate",
+            ["linear"],
+            ["get", "casePer10k"], // cases per 10,000 people
+            0,
+            "#f7fbff",
+            200,
+            "#c6dbef",
+            400,
+            "#6baed6",
+            600,
+            "#2171b5",
+            800,
+            "#08306b"
+          ],
+          "fill-opacity": 0.8,
+        },
+      });
+
+      // County borders
+      map.addLayer({
+        id: "wa-counties-borders",
+        type: "line",
+        source: "wa-covid",
+        paint: {
+          "line-color": "#ffffff",
+          "line-width": 0.6,
+        },
+      });
+
+      const info = document.getElementById("info");
+      const legend = document.getElementById("legend");
+
+      // Build legend to match the color ramp
+      legend.innerHTML = `
+        <div class="legend-title">Cases per 10k residents</div>
+      `;
+
+      const layers = ["0–200", "200–400", "400–600", "600–800", "800+"];
+
+      const colors = [
+        "#f7fbff",
+        "#c6dbef",
+        "#6baed6",
+        "#2171b5",
+        "#08306b",
+      ];
+
+      layers.forEach((layer, i) => {
+        const item = document.createElement("div");
+        item.className = "legend-item";
+        item.innerHTML = `
+          <span class="legend-color" style="background:${colors[i]}"></span>
+          <span>${layer}</span>
+        `;
+        legend.appendChild(item);
+      });
+
+      // Hover interaction
+      map.on("mousemove", "wa-counties-fill", (e) => {
+        const feature = e.features[0];
+
+        const name =
+          feature.properties.COUNTY_NAME ||
+          feature.properties.county ||
+          feature.properties.NAME ||
+          feature.properties.name;
+
+        const rateRaw =
+          feature.properties.casePer10k ||
+          feature.properties.casesPer10k ||
+          feature.properties.case_per_10k ||
+          feature.properties.cases_per_10k;
+
+        let rateDisplay = "N/A";
+        if (typeof rateRaw === "number") {
+          rateDisplay = rateRaw.toFixed(1);
+        } else if (typeof rateRaw === "string" && rateRaw.trim() !== "") {
+          rateDisplay = rateRaw;
+        }
+
+        info.innerHTML = `
+          <h2>WA COVID-19 cases per 10k</h2>
+          <p><strong>${name || "Unknown county"}</strong><br>
+          Cases per 10k: ${rateDisplay}</p>
+        `;
+      });
+
+      map.on("mouseleave", "wa-counties-fill", () => {
+        info.innerHTML = `
+          <h2>WA COVID-19 cases per 10k</h2>
+          <p>Hover over a county to see cases per 10,000 residents.</p>
+        `;
+      });
+    });
+  </script>
 </body>
 </html>
